Fix overflow

--- a/app/assets/stylesheets/nucore.scss
+++ b/app/assets/stylesheets/nucore.scss
@@ -458,6 +458,8 @@ body {
 
 html,body{
   min-height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body nav .navbar-inner .container .nav, .nav-tabs{
